--- a/src/components/shared/navigation/Navigation.module.css
+++ b/src/components/shared/navigation/Navigation.module.css
@@ -77,6 +77,14 @@
     height: 100%;
 }
 
+.auth-icons i {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
+    height: 100%;
+}
+
 .menuButton {
     background: none;
     border: none;
@@ -255,7 +263,7 @@
     .recipesDropdown li,
     .seasonalDropdown li,
     .newsDropdown li {
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     .recipesDropdown li a,
@@ -293,7 +301,8 @@
     }
 
     .auth-icons .navLinks {
-        gap: 20px;
+        /* gap:10px; */
+        gap: 0;
     }
 }
 
